Fix link alignment in footer.

--- a/mystbin/frontend/app/globals.css
+++ b/mystbin/frontend/app/globals.css
@@ -354,6 +354,11 @@ a {
   align-items: center;
 }
 
+.footerSection > a {
+  display: flex;
+  gap: 0.125rem;
+}
+
 .footerRight {
   display: flex;
   flex-direction: row;
